syntax = "proto3";

option go_package = "../main";
service auth {
  rpc Register(AuthRequest) returns (Empty);
  rpc Login(AuthRequest) returns (Empty);
  rpc GetAuth(AuthGet) returns (AuthResponse);
}

message AuthRequest {
  string username = 1;
  string password = 2;
}
message AuthResponse {
  string username = 1;
  string password = 2;
}
message AuthGet {
  string username = 1;
}
message  Empty {
}